# OrchardRover

./: README.md
OrchardRover/or_common/: CMakeLists.txt
OrchardRover/or_common/proto_io/: io.h
OrchardRover/or_common/state/: node_state.h
OrchardRover/or_detection/: CMakeLists.txt  package.xml
OrchardRover/or_detection/scripts/: test_trunk_detection.py  trunk_detection_node.py
OrchardRover/or_executor/: CMakeLists.txt  chassis_executor.cpp  chassis_executor.h  goal_behavior.h
OrchardRover/or_lasercamcal/: CMakeLists.txt
OrchardRover/or_lasercamcal/camera_models/: PinholeCamera.cc  PinholeCamera.h
OrchardRover/or_lasercamcal/config/: calibra_config_pinhole.yaml
OrchardRover/or_lasercamcal/launch/: kalibra_apriltag.launch
OrchardRover/or_lasercamcal/log/: apriltag_pose.txt  result.yaml
OrchardRover/or_lasercamcal/main/: calibr_offline.cpp  kalibratag_detector_node.cpp  showscan_node.cpp
OrchardRover/or_lasercamcal/src/: calc_cam_pose.h  laser_cam_cal_ceres.cpp  laser_cam_cal_ceres.h
OrchardRover/or_making_map/: CMakeLists.txt  exe_config.yaml  making_maps.cpp  making_maps.h  making_maps2.cpp
OrchardRover/or_msgs/: package.xml
OrchardRover/or_msgs/msg/: TrunkObsMsgXY.msg
hk_camera/: CMakeLists.txt  hk_camera.cpp  hk_camera.h  hk_camera_node.cpp  leonard_hk_camera.cpp  leonard_hk_camera.h  leonard_hk_camera.hpp  package.xml
hk_camera/config/: camera.yaml
hk_camera/launch/: hk_camera_show.launch
or_base/: CMakeLists.txt  package.xml  protocol_define.h  serial_comm_node.cpp  serial_comm_node.h  serial_communication_node.cpp
or_base/config/: or_base_parameter.yaml
or_base/include/: writetxt.h
or_bringup/: CMakeLists.txt  or_testpub.launch  package.xml
or_bringup/launch/: bag.launch  or_bag.launch  or_base.launch  or_detection_sensor.launch  or_fastslam.launch  or_rplidar.launch  or_slam.launch  or_stage.launch  or_test_pub.launch  or_trunk_detection.launch  or_trunkdetection.launch  rviz.launch  stage_planning.launch  stage_slam.launch  static_tf.launch
or_bringup/maps/: correct_map.pgm  correct_map.yaml  emptyorchard.pgm  orchard.pgm  orchard.yaml  orchard2.yaml  out_map.pgm  out_map.yaml
or_bringup/rviz/: roborts.rviz
or_bringup/worlds/: emptyorchard.world  orchard.world  orchard2.world
or_common/: CMakeLists.txt  package.xml
or_common/state/: error_code.h
or_costmap/: CMakeLists.txt  package.xml
or_costmap/config/: costmap_parameter_config_for_global_plan.prototxt  costmap_parameter_config_for_local_plan.prototxt  inflation_layer_config.prototxt  inflation_layer_config_min.prototxt  obstacle_layer_config.prototxt  static_layer_config.prototxt
or_costmap/include/: costmap_2d.h  costmap_interface.h  costmap_layer.h  inflation_layer.h  layer.h  layered_costmap.h  observation.h  obstacle_layer.h  static_layer.h
or_costmap/proto/: costmap_parameter_setting.pb.h  costmap_parameter_setting.proto  inflation_layer_setting.pb.h  inflation_layer_setting.proto  obstacle_layer_setting.pb.h  obstacle_layer_setting.proto  static_layer_setting.pb.cc  static_layer_setting.proto
or_costmap/src/: costmap_interface.cpp  costmap_math.cpp  footprint.cpp  inflation_layer.cpp  layer.cpp  layered_costmap.cpp  obstacle_layer.cpp  static_layer.cpp
or_detection/: CMakeLists.txt  package.xml
or_detection/camparams/: LScalibrateCamera.yaml  LongFCamCalib.yaml  RScalibrateCamera.yaml
or_detection/config/: or_detection_parameter.yaml
or_detection/scripts/: test_trunk_detection.py  trunk_detection.py  trunk_detection_initpath.py  trunk_detection_laser_cam.py  trunk_detection_node.py
or_executor/: executor_node.cpp  package.xml
or_io/: CMakeLists.txt  (+2 more)
or_meta/: package.xml
or_msgs/: CMakeLists.txt  package.xml
or_msgs/msg/: TrunkAngleMsg.msg  TrunkObsMsg.msg  TrunkObsMsgXY.msg
or_planning/: CMakeLists.txt  package.xml
or_planning/global_planner/: CMakeLists.txt  global_planner_node.h  global_planner_test.cpp
or_planning/global_planner/a_star_planner/: CMakeLists.txt  a_star_planner.cpp
or_planning/global_planner/proto/: global_planner_config.pb.h
or_planning/local_planner/: CMakeLists.txt  local_planner_node.cpp  teb_test.cpp  vel_converter.cpp
or_planning/local_planner/config/: local_planner.prototxt
or_planning/local_planner/include/: distance_calculation.h  line_iterator.h  local_planner_base.h  local_planner_node.h  local_visualization.h  obstacle.h  odom_info.h  robot_footprint_model.h  robot_position_cost.h  utility_tool.h
or_planning/local_planner/src/: local_planner_node.cpp  local_visualization.cpp  robot_position_cost.cpp
or_planning/local_planner/timed_elastic_band/: CMakeLists.txt
or_slam/: CMakeLists.txt  package.xml  slam_node.cpp  slam_node.h
or_slam/config/: or_slam.yaml  or_slam_sim.yaml
or_slam/fastslamalgs/: CMakeLists.txt  fastslam.cpp  fastslam.h  fastslam_config.h  fastslam_localization.cpp  fastslam_localization.h  pflocalization.cpp  pflocalization.h
or_slam/fastslamalgs/config/: fastslam.yaml
or_slam/fastslamalgs/particle_filter/: particle_filter.cpp  particle_filter.h  particle_filter_gaussian_pdf.h  particle_filter_sample.h
or_slam/fastslamalgs/sensors/: sensor_odom.cpp  sensor_odom.h
or_slam/include/: fastslam_math.h  fastslam_node.h  fastslam_test.h  log.h  or_slam_math.h  sim_odom_data_generator.h  slam_node.h  types.h  writetxt.h
or_slam/optimized_slam_algs/: CMakeLists.txt  optimized_slam.cpp  optimized_slam.h  optimized_slam_config.h
or_slam/optimized_slam_algs/common/: math.h
or_slam/optimized_slam_algs/config/: optimizedslam.yaml
or_slam/optimized_slam_algs/cost_function/: cost_helpers_impl.h  spa_cost_function_2d.cpp  spa_cost_function_2d.h
or_slam/optimized_slam_algs/transform/: rigid_transform.cpp  rigid_transform.h  transform.h
or_slam/src/: fastslam_node.cpp  fastslam_test.cpp  slam_node.cpp  testlistener.cpp
or_test/: CMakeLists.txt  package.xml
or_test/scripts/: testpylistener.py  testpytalker.py
or_test/src/: robot_vision.cpp  test_bag.cpp  testlistener.cpp  testpublish.cpp  timesynchronizer.cpp  turtle_tf_broadcaster.cpp  turtle_tf_listener.cpp
(+133 files in other folders)
