<package>
    <name>or_bringup</name>
    <version>1.0.0</version>
    <description>
        The or_bringup package provides quick bringup for OrchardRover system
    </description>
    <author>Leonard Chen</author>
    <maintainer email="1344618323@qq.com">Leonard Chen</maintainer>
    <license>GPL 3.0 </license>
    <url>https://github.com/1344618323/OrchardRover</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>or_test</build_depend>

    <run_depend>or_test</run_depend>


    <export>
    </export>

</package>
