<package>
    <name>or_common</name>
    <version>1.0.0</version>
    <description>
        The roborts common package provides all the common functions for RoboMaster AI Robot
    </description>
    <author>RoboMaster</author>
    <maintainer email="robomaster@dji.com">RoboMaster</maintainer>
    <license>GPL 3.0 </license>
    <url>https://github.com/RoboMaster/RoboRTS</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    
    <run_depend>roscpp</run_depend>
    
    <export>
    </export>

</package>
