<?xml version="1.0"?>
<package format="2">
    <name>or_detection</name>
    <version>1.0.0</version>
    <description>
        The or_detection package provides detectioin for OrchardRover system
    </description>
    <author>Leonard Chen</author>
    <maintainer email="1344618323@qq.com">Leonard Chen</maintainer>
    <license>GPL 3.0 </license>
    <url>https://github.com/1344618323/OrchardRover</url>

    <buildtool_depend>catkin</buildtool_depend>

    <!-- <build_depend>message_generation</build_depend> -->
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>or_msgs</build_depend>

    <!-- <run_depend>message_runtime</run_depend> -->
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>or_msgs</exec_depend>


    <build_depend>cv_bridge</build_depend>
    <build_depend>image_transport</build_depend>

    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>image_transport</exec_depend>

    <export>
    </export>

</package>
