<package>
    <name>or_executor</name>
    <version>1.0.0</version>
    <description>
        The exector package provides Robot
    </description>
    <author>Leonard Chen</author>
    <maintainer email="1344618323@qq.com">Leonard Chen</maintainer>
    <license>GPL 3.0 </license>
    <url>https://github.com/1344618323/OrchardRover</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>actionlib</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>or_msgs</build_depend>

    <run_depend>actionlib</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>or_msgs</run_depend>

    <export>
    </export>

</package>
