<package>
    <name>or_meta</name>
    <version>1.0.0</version>
    <description>
        The orchardrover meta package provides all the functionality for OrchardRover system
    </description>
    <author>Leonard Chen</author>
    <maintainer email="1344618323@qq.com">Leonard Chen</maintainer>
    <license>GPL 3.0 </license>
    <url>https://github.com/RoboMaster/RoboRTS</url>

    <buildtool_depend>catkin</buildtool_depend>

    <run_depend>or_test</run_depend>
    <run_depend>or_bringup</run_depend>

    <export>
        <metapackage/>
    </export>

</package>
