<package>
    <name>or_meta</name>
    <version>1.0.0</version>
    <description>
        The orchardrover meta package provides all the functionality for OrchardRover system
    </description>
    <author>Leonard Chen</author>
    <maintainer email="1344618323@qq.com">Leonard Chen</maintainer>
    <license>GPL 3.0 </license>
    <url>https://github.com/1344618323/OrchardRover</url>

    <buildtool_depend>catkin</buildtool_depend>

    <run_depend>or_test</run_depend>
    <run_depend>or_bringup</run_depend>
    <run_depend>or_detection</run_depend>
    <run_depend>or_msgs</run_depend>
    <run_depend>hk_camera</run_depend>

    <export>
        <metapackage/>
    </export>

</package>
