<package>
    <name>or_planning</name>
    <version>1.0.0</version>
    <description>
        The planning package provides motion planning for Robot
    </description>
    <author>Leonard Chen</author>
    <maintainer email="1344618323@qq.com">Leonard Chen</maintainer>
    <license>GPL 3.0 </license>
    <url>https://github.com/1344618323/OrchardRover</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>actionlib</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>or_msgs</build_depend>
    <build_depend>or_common</build_depend>
    <build_depend>or_costmap</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>interactive_markers</build_depend>

    <run_depend>actionlib</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>or_msgs</run_depend>
    <run_depend>or_common</run_depend>
    <run_depend>or_costmap</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>pcl_conversions</run_depend>
    <run_depend>pcl_ros</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>interactive_markers</run_depend>

    <export>
    </export>

</package>
