<?xml version="1.0"?>
<package format="2">
    <name>or_slam</name>
    <version>1.0.0</version>
    <description>
        The or_slam package provides slam for OrchardRover system
    </description>
    <author>Leonard Chen</author>
    <maintainer email="1344618323@qq.com">Leonard Chen</maintainer>
    <license>GPL 3.0 </license>
    <url>https://github.com/1344618323/OrchardRover</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <exec_depend>roscpp</exec_depend>

    <build_depend>std_msgs</build_depend>
    <exec_depend>std_msgs</exec_depend>

    <build_depend>sensor_msgs</build_depend>
    <exec_depend>sensor_msgs</exec_depend>
    
    <build_depend>tf2</build_depend>
    <exec_depend>tf2</exec_depend>

    <build_depend>tf2_ros</build_depend>
    <exec_depend>tf2_ros</exec_depend>

    <build_depend>or_msgs</build_depend>
    <exec_depend>or_msgs</exec_depend>

    <export>
    </export>

</package>
