<?xml version="1.0"?>
<package format="2">
    <name>or_test</name>
    <version>1.0.0</version>
    <description>
        The or_test package provides quick bringup for OrchardRover system
    </description>
    <author>Leonard Chen</author>
    <maintainer email="1344618323@qq.com">Leonard Chen</maintainer>
    <license>GPL 3.0 </license>
    <url>https://github.com/RoboMaster/RoboRTS</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_export_depend>cv_bridge</build_export_depend>
    <build_export_depend>image_transport</build_export_depend>
    <build_export_depend>sensor_msgs</build_export_depend>
    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>image_transport</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>

    <build_depend>tf2</build_depend>
    <build_depend>tf2_ros</build_depend>
    <build_export_depend>tf2</build_export_depend>
    <build_export_depend>tf2_ros</build_export_depend>
    <exec_depend>tf2</exec_depend>
    <exec_depend>tf2_ros</exec_depend>

    <export>
    </export>

</package>
